// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Header Overview 1`] = `
<header
  className="css-4cffwv"
>
  header
</header>
`;

exports[`Components/Header Overview 2`] = `
<DocumentFragment>
  <header
    class="css-4cffwv"
  >
    header
  </header>
</DocumentFragment>
`;
